--- a/styles.css
+++ b/styles.css
@@ -838,7 +838,7 @@ body.page-writing .testimonial span{
 }
 .featured-image-container {
   width: 100%;
-  height: 400px; /* controls vertical crop */
+  height: 360px; /* controls vertical crop */
   overflow: hidden;
   border-radius: var(--radius);
 }
@@ -847,6 +847,6 @@ body.page-writing .testimonial span{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center top;
+  object-position: center 40%;
   display: block;
 }
